stream file 10 July